--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,5 @@
 # vim: syntax=config
 
-ao=alsa
 volume=80
 hls-bitrate=max
 use-filedir-conf
@@ -10,10 +9,7 @@ cursor-autohide=1000
 prefetch-playlist=yes
 
 # video
-vo=opengl
-display-fps=75
-opengl-backend=angle
-video-sync=display-resample
+screen=3
 
 # osd
 osd-level=1
