--- a/etc/xorg.conf.d/20-amdgpu.conf
+++ b/etc/xorg.conf.d/20-amdgpu.conf
@@ -1,5 +1,5 @@
 Section "Device"
-    Indetifier "AMD Radeon VII"
+    Identifier "AMD Radeon VII"
     Driver "amdgpu"
     Option "DRI" "3"
 EndSection
