--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -8,10 +8,8 @@ force-seekable=yes
 cursor-autohide=1000
 prefetch-playlist=yes
 
-# video
-screen=3
-
 # osd
+osc=no
 osd-level=1
 osd-font-size=22
 osd-color='#CCE7E7E7'
@@ -34,7 +32,6 @@ quiet
 # misc
 screenshot-format=png
 ytdl-format=bestvideo+bestaudio
-
 
 # cache
 cache=yes
