--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,6 @@
 # vim: syntax=config
 
-volume=80
+volume=60
 hls-bitrate=max
 use-filedir-conf
 no-audio-display
@@ -8,9 +8,14 @@ force-seekable=yes
 cursor-autohide=1000
 prefetch-playlist=yes
 
+# video
+vo=gpu # vo=libmpv
+video-sync=display-resample
+
 # osd
 osc=no
 osd-level=1
+term-osd-bar=yes
 osd-font-size=22
 osd-color='#CCE7E7E7'
 osd-border-color='#DD282828'
@@ -26,7 +31,7 @@ alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing pri
 
 # terminal
 term-osd-bar
-term-playing-msg='\nDuration: ${duration}, Format: ${file-format}, Resolution: ${width}x${height}, Display: ${display-fps} Hz'
+term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
 quiet
 
 # misc
