--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -35,5 +35,6 @@ term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
 quiet
 
 # misc
+loop-playlist
 screenshot-format=png
 ytdl-format=bestvideo+bestaudio
