--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,8 +66,8 @@ set -g status-bg default
 set -g status-fg white
 set -g status-interval 1
 
-set -g pane-border-fg black
-set -g pane-active-border-fg white
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=white
 
 # misc. settings
 set -g default-shell /bin/zsh
