add: midair autoexec.cfg

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -11,6 +11,8 @@ prefetch-playlist=yes
 # video
 vo=gpu # vo=libmpv
 video-sync=display-resample
+interpolation=yes
+tscale=mitchell
 
 # osd
 osc=no
