--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -12,7 +12,7 @@ prefetch-playlist=yes
 vo=gpu # vo=libmpv
 video-sync=display-resample
 interpolation=yes
-tscale=mitchell
+# autofit-larger=50%x%50
 
 # osd
 osc=no
