--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -12,13 +12,14 @@ prefetch-playlist=yes
 vo=gpu # vo=libmpv
 video-sync=display-resample
 interpolation=yes
-# autofit-larger=50%x%50
+autofit-larger=50%x50%
+# geometry=50%:65%
 
 # osd
 osc=no
 osd-level=1
 term-osd-bar=yes
-osd-font-size=22
+osd-font-size=16
 osd-color='#CCE7E7E7'
 osd-border-color='#DD282828'
 osd-status-msg='${playback-time/full} / ${duration} ${?percent-pos:(${percent-pos}%)}\n${?chapter:chapter: ${chapter}}\nframe: ${estimated-frame-number} / ${estimated-frame-count}'
