--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,6 @@
 # vim: syntax=config
 
-volume=70
+volume=50
 hls-bitrate=max
 use-filedir-conf
 no-audio-display
@@ -40,4 +40,6 @@ quiet
 # misc
 loop-playlist
 screenshot-format=png
+screenshot-png-compression=0
+screenshot-directory="~/usr/img/"
 ytdl-format=bestvideo+bestaudio
