--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,8 +58,8 @@ set -g status-left ""
 set -g status-left-length 80
 set -g status-right ""
 
-set -g window-status-format "#[bg=cyan,fg=black,noreverse]  #W ░▓"
-set -g window-status-current-format "#[bg=white,fg=black,noreverse]  #W ░▓"
+set -g window-status-format "#[bg=cyan,fg=black,noreverse] #W "
+set -g window-status-current-format "#[bg=white,fg=black,noreverse] #W "
 set -g status-justify right
 
 set -g status-bg default
