--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -35,7 +35,7 @@ alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing pri
 # terminal
 term-osd-bar
 term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
-quiet
+really-quiet
 
 # misc
 loop-playlist
