--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -41,5 +41,5 @@ really-quiet
 loop-playlist
 screenshot-format=png
 screenshot-png-compression=0
-screenshot-directory="~/usr/img/"
+screenshot-directory="~/usr/img/mpv"
 ytdl-format=bestvideo+bestaudio
