--- a/midair/toasty.cfg
+++ b/midair/toasty.cfg
@@ -1,4 +1,4 @@
-// autoexec.cfg v2.0 by fyr with compliments to schreq
+// toasty.cfg
 //
 // save this file as autoexec.cfg in
 // ...\SteamApps\common\Midair\Midair\Binaries
@@ -14,13 +14,13 @@ set Engine.InputSettings ConsoleKey Grave
 // stat fps
 
 // video
-set Midair.MAGameEngine FrameRateCap 200
+set Midair.MAGameEngine FrameRateCap 300
 set Midair.MAGameUserSettings bUseVSync False
 set Midair.MAGameUserSettings ResolutionSizeX 2560
 set Midair.MAGameUserSettings ResolutionSizeY 1440
 set Midair.MAGameUserSettings FullscreenMode 2 // 0=Fullscreen 1=Borderless 2=Windowed
-r.OneFrameThreadLag 1
-r.ScreenPercentage 110
+r.OneFrameThreadLag 0
+r.ScreenPercentage 100
 
 // fov
 set Midair.MAGameUserSettings UserFOV 100 // Min=80 Max=120
@@ -41,41 +41,41 @@ Mouse TurnDist=20
 r.TonemapperFilm 0
 r.TonemapperGamma 2
 r.Tonemapper.Sharpen 0
-r.Tonemapper.Quality 5
+r.Tonemapper.Quality 2
 r.Tonemapper.GrainQuantization 0
-// show Vignette
+show Vignette
 
 // AntiAliasing
 r.DefaultFeature.AntiAliasing 1 // 1=FXAA 2=TAA 3=MSAA
 r.PostProcessAAQuality 6
 
 // textures
-r.MaxAnisotropy 16
+r.MaxAnisotropy 4
 r.Streaming.MipBias 0
 r.Streaming.PoolSize 16000
 r.SkeletalMeshLODBias 0
-sg.ViewDistanceQuality 2
-// show Decals
+sg.ViewDistanceQuality 0
+show Decals
 
 // foliage
 sg.FoliageQuality 0
 grass.DensityScale 0
 foliage.DensityScale 0
 r.ViewDistanceScale 0.01
-// show InstancedFoliage
-// show InstancedGrass
+show InstancedFoliage
+show InstancedGrass
 
 // effects
-sg.EffectsQuality 3
-r.DetailMode 1
-r.ShadowQuality 5
+sg.EffectsQuality 0
+r.DetailMode 0
+r.ShadowQuality 0
 r.Shadow.MinResolution 4096
 r.Shadow.MaxResolution 4096
-r.SceneColorFormat 2
+r.SceneColorFormat 1
 r.DisableDistortion 0
-r.RefractionQuality 3
-r.MaterialQualityLevel 3
-r.ReflectionEnvironment 3
+r.RefractionQuality 0
+r.MaterialQualityLevel 0
+r.ReflectionEnvironment 0
 r.TranslucencyVolumeBlur 0
 r.EmitterSpawnRateScale 0.4
 r.TranslucencyLightingVolumeDim 48
@@ -85,23 +85,23 @@ FX.MaxGPUParticlesSpawnedPerFrame 10
 
 // bloom
 r.Bloom.Cross 1
-r.BloomQuality 3
+r.BloomQuality 0
 r.DefaultFeature.Bloom 1
 
 // other tweaks
-r.SubsurfaceScattering 3
-r.SSS.Quality 3
+r.SubsurfaceScattering 0
+r.SSS.Quality 0
 r.SSR.Quality 0
-r.SSR.Cone 1
+r.SSR.Cone 0
 r.SSR.MaxRoughness 0.4
 r.Atmosphere 0
 r.Upscale.Quality 3
 r.LensFlareQuality 0
 r.FastBlurThreshold 0
 r.MotionBlurQuality 0
-r.LightShaftQuality 3
-r.DepthOfFieldQuality 3
-r.LightFunctionQuality 3
+r.LightShaftQuality 0
+r.DepthOfFieldQuality 0
+r.LightFunctionQuality 0
 r.EyeAdaptationQuality 0
 r.RenderTargetPoolMin 300
 r.AmbientOcclusionLevels 0
