--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,17 +1,18 @@
-r add video-zoom -0.05
-t add video-zoom +0.05
-y set window-scale 1.0
-
-Ctrl+h add video-pan-x +0.02
-Ctrl+j add video-pan-y -0.02
-Ctrl+k add video-pan-y +0.02
-Ctrl+l add video-pan-x -0.02
-
 RIGHT seek 3
 LEFT seek -3
 
-MOUSE_BTN3 ignore
-MOUSE_BTN4 ignore
+y set window-scale 1.0
+Y set window-scale 0.5
+
+# MBTN_RIGHT script-binding image_viewer/drag-to-pan
+# MBTN_LEFT  script-binding image_viewer/pan-follows-cursor
+# WHEEL_UP   script-message cursor-centric-zoom 0.1
+# WHEEL_DOWN script-message cursor-centric-zoom -0.1
+
+MBTN_LEFT     ignore
+MBTN_LEFT_DBL ignore
+WHEEL_UP      ignore
+WHEEL_DOWN    ignore
 
 b cycle interpolation
 n cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell"
