--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -9,20 +9,24 @@ cursor-autohide=1000
 prefetch-playlist=yes
 
 # video
-vo=gpu # vo=libmpv
+profile=gpu-hq # vo=libmpv
+scale=ewa_lanczossharp
+cscale=ewa_lanczossharp
 video-sync=display-resample
 interpolation=yes
+tscale=mitchell
+
 autofit-larger=50%x50%
 # geometry=50%:65%
 
 # osd
 osc=no
 osd-level=1
-term-osd-bar=yes
-osd-font-size=16
+osd-font-size=20
 osd-color='#CCE7E7E7'
+osd-border-size=2
 osd-border-color='#DD282828'
-osd-status-msg='${playback-time/full} / ${duration} ${?percent-pos:(${percent-pos}%)}\n${?chapter:chapter: ${chapter}}\nframe: ${estimated-frame-number} / ${estimated-frame-count}'
+osd-status-msg='${filename} \n\n ${playback-time/full} / ${duration} ${?percent-pos:(${percent-pos}%)} ${estimated-frame-number} / ${estimated-frame-count}'
 
 # subs
 no-sub-visibility # no subs on launch
@@ -33,9 +37,9 @@ slang=enm,en,eng       # automatically select these subtitles (decreasing priori
 alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing priority)
 
 # terminal
-term-osd-bar
+term-osd-bar=yes
 term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
-really-quiet
+quiet
 
 # misc
 loop-playlist
