--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -1,18 +1,28 @@
-RIGHT seek 3
-LEFT seek -3
+LEFT seek -2
+DOWN seek -30
+UP seek 30
+RIGHT seek 2
 
-y set window-scale 1.0
-Y set window-scale 0.5
+[ set speed 1.0
+] set speed 4.0
 
-# MBTN_RIGHT script-binding image_viewer/drag-to-pan
-# MBTN_LEFT  script-binding image_viewer/pan-follows-cursor
-# WHEEL_UP   script-message cursor-centric-zoom 0.1
-# WHEEL_DOWN script-message cursor-centric-zoom -0.1
+y set window-scale 0.5
+Y set window-scale 1.0
+
+Q quit
+q playlist-remove current
+Ctrl+q quit-watch-later
+Ctrl+l run "/home/fyr/.dots/bin/fcut"
+
+P show-text "${playlist}"
+BS show-text "${track-list}"
+
+b cycle interpolation
+n cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell"
+A cycle-values video-aspect "16:9" "4:3" "-1"
 
 MBTN_LEFT     ignore
 MBTN_LEFT_DBL ignore
 WHEEL_UP      ignore
 WHEEL_DOWN    ignore
 
-b cycle interpolation
-n cycle-values tscale "oversample" "linear" "catmull_rom" "mitchell"
