--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,6 @@
 # vim: syntax=config
 
-volume=50
+volume=40
 hls-bitrate=max
 use-filedir-conf
 no-audio-display
@@ -16,17 +16,16 @@ video-sync=display-resample
 interpolation=yes
 tscale=mitchell
 
-autofit-larger=50%x50%
-# geometry=50%:65%
+geometry=40%x40%
 
 # osd
 osc=no
 osd-level=1
-osd-font-size=20
+osd-font-size=26
 osd-color='#CCE7E7E7'
 osd-border-size=2
 osd-border-color='#DD282828'
-osd-status-msg='${filename} \n\n ${playback-time/full} / ${duration} ${?percent-pos:(${percent-pos}%)} ${estimated-frame-number} / ${estimated-frame-count}'
+osd-status-msg='${filename} \n\n ${playback-time} / ${duration} ${?percent-pos:(${percent-pos}%)}'
 
 # subs
 no-sub-visibility # no subs on launch
@@ -37,13 +36,12 @@ slang=enm,en,eng       # automatically select these subtitles (decreasing priori
 alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing priority)
 
 # terminal
-term-osd-bar=yes
 term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
-quiet
+really-quiet
 
 # misc
 loop-playlist
 screenshot-format=png
 screenshot-png-compression=0
 screenshot-directory="~/usr/img/mpv"
-ytdl-format=bestvideo+bestaudio
+ytdl-format='bestvideo[ext=mp4][width<=1920][height<=1080]+bestaudio[ext=m4a]'
