--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -7,7 +7,7 @@ RIGHT seek 2
 ] set speed 4.0
 
 y set window-scale 0.5
-Y set window-scale 1.0
+u set window-scale 1.0
 
 Q quit
 q playlist-remove current
@@ -26,3 +26,6 @@ MBTN_LEFT_DBL ignore
 WHEEL_UP      ignore
 WHEEL_DOWN    ignore
 
+# scripts
+g script-message contact-sheet-close; script-message playlist-view-toggle
+c script-message playlist-view-close; script-message contact-sheet-toggle
