--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,75 +1,62 @@
+#bindings
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
-
 set -g mode-keys vi
 set -g status-keys vi
 
-unbind c
-unbind q
-unbind i
 unbind l
 unbind s
-unbind w
 
 bind b new
-bind n neww
-bind m choose-session
 bind x kill-pane
-bind X kill-session
-bind t set status
+bind-key X confirm-before -p "Kill #S (y/n)?" "run-shell 'tmux switch-client -n \\\; kill-session -t \"\$(tmux display-message -p \"#S\")\"'"
 bind r source-file ~/.tmux.conf
-bind -r q next-layout
-bind -r w previous-layout
-
-bind s split-window -h -c "#{pane_current_path}"
-bind v split-window -v -c "#{pane_current_path}"
 
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 bind -r a select-pane -t :.+
-
-bind -n M-w resize-pane -U
-bind -n M-a resize-pane -L
-bind -n M-x resize-pane -D
-bind -n M-d resize-pane -R
-
-bind -n M-p previous-window
-bind -n M-n next-window
+bind -r s split-window -h -c "#{pane_current_path}"
+bind -r v split-window -v -c "#{pane_current_path}"
+bind -r N next-layout
+bind -r P previous-layout
 
 bind e copy-mode
 
+# mouse
 set -g mouse on
-set -g base-index 1
-set -g pane-base-index 1
 
+# status
 set -g status on
 set -g visual-activity off
-set -g monitor-activity off
-
-set -g set-titles on
-set -g set-titles-string "#T"
-set -g automatic-rename on
-
-set -g status-position bottom
-set -g status-left ""
-set -g status-left-length 80
-set -g status-right ""
-
-set -g window-status-format "#[bg=cyan,fg=black,noreverse] #W "
-set -g window-status-current-format "#[bg=white,fg=black,noreverse] #W "
-set -g status-justify right
-
+set -g monitor-activity on
+set -g status 2
 set -g status-bg default
 set -g status-fg white
+set -g status-position bottom
+set -g status-left "#[bg=black,fg=white]#(dat)"
+set -g status-left-length 80
+set -g status-right ""
+set -g window-status-format "#[bg=black,fg=white,noreverse]  #I: #W  "
+set -g window-status-current-format "#[bg=cyan,fg=white,noreverse] #I: #W  "
+set -g status-justify right
 set -g status-interval 1
 
+# title of window
+set -g set-titles on
+set -g set-titles-string "tmux: #T"
+set -g automatic-rename on
+
+# colour
+set -g mode-style bg=cyan,fg=white
 set -g pane-border-style fg=black
 set -g pane-active-border-style fg=white
 
 # misc. settings
+set -g base-index 1
+set -g pane-base-index 1
 set -g default-shell /bin/zsh
 set -g default-command /bin/zsh
 set -g default-terminal "screen-256color"
