--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -13,6 +13,7 @@ profile=gpu-hq # vo=libmpv
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 video-sync=display-resample
+hdr-compute-peak=no
 interpolation=yes
 tscale=mitchell
 
