--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,9 +9,8 @@ unbind l
 unbind s
 
 bind b new
-bind x kill-pane
-bind-key X confirm-before -p "Kill #S (y/n)?" "run-shell 'tmux switch-client -n \\\; kill-session -t \"\$(tmux display-message -p \"#S\")\"'"
-bind r source-file ~/.tmux.conf
+bind X kill-session
+bind R source-file ~/.tmux.conf
 
 bind -r h select-pane -L
 bind -r j select-pane -D
@@ -32,17 +31,21 @@ set -g mouse on
 set -g status on
 set -g visual-activity off
 set -g monitor-activity on
-set -g status 2
+set -g status on
 set -g status-bg default
 set -g status-fg white
 set -g status-position bottom
 set -g status-left "#[bg=black,fg=white]#(dat)"
 set -g status-left-length 80
 set -g status-right ""
+set -g window-status-bell-style red
 set -g window-status-format "#[bg=black,fg=white,noreverse]  #I: #W  "
 set -g window-status-current-format "#[bg=cyan,fg=white,noreverse] #I: #W  "
 set -g status-justify right
 set -g status-interval 1
+
+set -g pane-border-status bottom
+setw -g pane-border-format '──'
 
 # title of window
 set -g set-titles on
@@ -53,6 +56,16 @@ set -g automatic-rename on
 set -g mode-style bg=cyan,fg=white
 set -g pane-border-style fg=black
 set -g pane-active-border-style fg=white
+set -g clock-mode-colour red
+
+# set -g message-style style bg=cyan,fg=white
+# set -g message-command-style bg=cyan,fg=white
+# set -g window-active-style style
+# set -g window-status-activity-style style
+# set -g window-status-current-style style
+# set -g window-status-last-style style
+# set -g window-status-style style
+# set -g window-style style
 
 # misc. settings
 set -g base-index 1
@@ -60,7 +73,6 @@ set -g pane-base-index 1
 set -g default-shell /bin/zsh
 set -g default-command /bin/zsh
 set -g default-terminal "screen-256color"
+set -g history-limit 10000
 set -g repeat-time 250
 set -s escape-time 0 # Vim Insta Escape
-
-set -g history-limit 10000
