--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,13 +35,13 @@ set -g status on
 set -g status-bg default
 set -g status-fg white
 set -g status-position bottom
-set -g status-left "#[bg=black,fg=white]#(dat)"
-set -g status-left-length 80
-set -g status-right ""
-set -g window-status-bell-style red
-set -g window-status-format "#[bg=black,fg=white,noreverse]  #I: #W  "
-set -g window-status-current-format "#[bg=cyan,fg=white,noreverse] #I: #W  "
-set -g status-justify right
+set -g status-left ""
+set -g status-right "#[bg=black,fg=white]#(dat)"
+set -g status-right-length 80
+set -g window-status-bell-style bg=red,fg=white
+set -g window-status-format "#[bg=black,fg=white,noreverse] #I #W "
+set -g window-status-current-format "#[bg=white,fg=black,noreverse] #I #W "
+set -g status-justify left
 set -g status-interval 1
 
 set -g pane-border-status bottom
