--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -7,6 +7,7 @@ no-audio-display
 force-seekable=yes
 cursor-autohide=1000
 prefetch-playlist=yes
+title="${?media-title:${media-title}}${!media-title:No file.}"
 
 # video
 profile=gpu-hq # vo=libmpv
