--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -13,6 +13,7 @@ Q quit
 q playlist-remove current
 Ctrl+q quit-watch-later
 Ctrl+l run "/home/fyr/.dots/bin/fcut"
+Ctrl+c run "/home/fyr/.dots/bin/fcut precise"
 
 P show-text "${playlist}"
 BS show-text "${track-list}"
