--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -47,3 +47,4 @@ screenshot-format=png
 screenshot-png-compression=0
 screenshot-directory="~/usr/img/mpv"
 ytdl-format='bestvideo[ext=mp4][width<=1920][height<=1080]+bestaudio[ext=m4a]'
+watch-later-directory="~/.local/share/mpv"
