--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -39,7 +39,7 @@ alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing pri
 
 # terminal
 term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
-really-quiet
+# really-quiet
 
 # misc
 loop-playlist
