--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -11,9 +11,10 @@ u set window-scale 1.0
 
 Q quit
 q playlist-remove current
-Ctrl+q quit-watch-later
+f run "/home/fyr/src/fwm/full"
 Ctrl+l run "/home/fyr/.dots/bin/fcut"
 Ctrl+c run "/home/fyr/.dots/bin/fcut precise"
+Ctrl+q quit-watch-later
 
 P show-text "${playlist}"
 BS show-text "${track-list}"
