--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,20 +1,22 @@
 # shadow
 shadow = true;
-shadow-radius = 3;
-shadow-offset-x = 1;
-shadow-offset-y = 1;
-shadow-opacity = 0.2;
+shadow-radius = 4;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
+shadow-opacity = 0.5;
 
 # fade
 fading = true;
-fade-delta = 5;
-fade-in-step = 0.05;
-fade-out-step = 0.05;
+fade-delta = 15;
+fade-in-step = 0.15;
+fade-out-step = 0.15;
 
 wintypes:
 {
     dock = { fade = false; shadow = false; opacity = 1; focus = false; };
 }
+
+# corner-radius = 30;
 
 backend = "glx";
 refresh-rate = 144;
