--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,5 +1,5 @@
 # shadow
-shadow = true;
+shadow = false;
 shadow-radius = 4;
 shadow-offset-x = 0;
 shadow-offset-y = 0;
@@ -16,8 +16,8 @@ wintypes:
     dock = { fade = false; shadow = false; opacity = 1; focus = false; };
 }
 
-# corner-radius = 30;
+corner-radius = 10;
 
-backend = "glx";
+backend = "xrender";
 refresh-rate = 144;
 vsync = false;
