--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,13 +1,13 @@
 # shadow
-shadow = false;
-shadow-radius = 4;
-shadow-offset-x = 0;
-shadow-offset-y = 0;
+shadow = true;
+shadow-radius = 20;
+shadow-offset-x = -10;
+shadow-offset-y = -10;
 shadow-opacity = 0.5;
 
 # fade
 fading = true;
-fade-delta = 15;
+fade-delta = 20;
 fade-in-step = 0.15;
 fade-out-step = 0.15;
 
@@ -20,4 +20,4 @@ corner-radius = 10;
 
 backend = "xrender";
 refresh-rate = 144;
-vsync = false;
+vsync = true;
