--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -13,7 +13,7 @@ fade-out-step = 0.15;
 
 wintypes:
 {
-    dock = { fade = false; shadow = false; opacity = 1; focus = false; };
+    dock = { fade = false; shadow = true; opacity = 1; focus = false; };
 }
 
 corner-radius = 10;
