--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,23 +1,31 @@
 # shadow
 shadow = true;
-shadow-radius = 20;
-shadow-offset-x = -10;
-shadow-offset-y = -10;
-shadow-opacity = 0.5;
+shadow-radius = 15;
+shadow-offset-x = -8;
+shadow-offset-y = -8;
+shadow-opacity = 0.65;
 
 # fade
 fading = true;
-fade-delta = 20;
+fade-delta = 15;
 fade-in-step = 0.15;
 fade-out-step = 0.15;
 
+# corners
+corner-radius = 10;
+
+# specific
 wintypes:
 {
     dock = { fade = false; shadow = true; opacity = 1; focus = false; };
 }
 
-corner-radius = 10;
+rounded-corners-exclude = [
+    "window_type = 'menu'",
+    "window_type = 'tooltip'",
+    "window_type = 'popup_menu'"
+];
 
 backend = "xrender";
 refresh-rate = 144;
-vsync = true;
+vsync = false;
