--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -11,7 +11,7 @@ u set window-scale 1.0
 
 Q quit
 q playlist-remove current
-f run "/home/fyr/src/fwm/full"
+f run "/home/fyr/src/fwm/move full"
 Ctrl+l run "/home/fyr/.dots/bin/fcut"
 Ctrl+c run "/home/fyr/.dots/bin/fcut precise"
 Ctrl+q quit-watch-later
