--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,13 +1,17 @@
 # vim: syntax=config
 
-volume=50
-hls-bitrate=max
+# behaviour
+loop-playlist
 use-filedir-conf
-no-audio-display
 force-seekable=yes
 cursor-autohide=1000
 prefetch-playlist=yes
-title="${?media-title:${media-title}}${!media-title:No file.}"
+save-position-on-quit=yes
+
+# audio
+volume=50
+replaygain=track
+no-audio-display
 
 # video
 profile=gpu-hq # vo=libmpv
@@ -18,6 +22,7 @@ hdr-compute-peak=no
 interpolation=yes
 tscale=mitchell
 
+# geometry
 autofit-smaller=10%
 autofit-larger=40%
 
@@ -44,7 +49,7 @@ term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
 really-quiet
 
 # misc
-loop-playlist
+title="${?media-title:${media-title}}${!media-title:No file.}"
 screenshot-format=png
 screenshot-png-compression=0
 screenshot-directory="~/usr/img/mpv"
