--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,3 +73,5 @@ set -g pane-base-index 1
 set -g repeat-time 250
 set -g history-limit 10000
 set -s escape-time 0 # Vim Insta Escape
+
+set-option -g default-command /bin/zsh
