--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,9 +1,9 @@
 # shadow
 shadow = true;
-shadow-radius = 15;
-shadow-offset-x = -8;
+shadow-radius = 10;
+shadow-offset-x = -7;
 shadow-offset-y = -8;
-shadow-opacity = 0.65;
+shadow-opacity = 1;
 
 # fade
 fading = true;
@@ -12,7 +12,7 @@ fade-in-step = 0.15;
 fade-out-step = 0.15;
 
 # corners
-corner-radius = 10;
+corner-radius = 8;
 
 # specific
 wintypes:
@@ -23,7 +23,8 @@ wintypes:
 rounded-corners-exclude = [
     "window_type = 'menu'",
     "window_type = 'tooltip'",
-    "window_type = 'popup_menu'"
+    "window_type = 'popup_menu'",
+    "window_type = 'dropdown_menu'"
 ];
 
 backend = "xrender";
