--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,13 +1,13 @@
 # shadow
 shadow = true;
-shadow-radius = 10;
-shadow-offset-x = -7;
+shadow-radius = 15;
+shadow-offset-x = -8;
 shadow-offset-y = -8;
 shadow-opacity = 1;
 
 # fade
-fading = true;
-fade-delta = 15;
+fading = false;
+fade-delta = 5;
 fade-in-step = 0.15;
 fade-out-step = 0.15;
 
