--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -25,6 +25,8 @@ A cycle-values video-aspect "16:9" "4:3" "-1"
 
 MBTN_LEFT     ignore
 MBTN_LEFT_DBL ignore
+MBTN_BACK     ignore
+MBTN_FORWARD  ignore
 WHEEL_UP      ignore
 WHEEL_DOWN    ignore
 
