--- a/MangoHud/RiseOfTheTombRaider.conf
+++ b/MangoHud/RiseOfTheTombRaider.conf
@@ -1,12 +1,11 @@
 fps=0
-vsync=1
-gpu_stats=0
+vsync=2
+gpu_stats=1
 cpu_stats=0
-position=top-left
-offset_x=380
-offset_y=1344
-height=200
-font_size=20
+position=top-right
+offset_x=0
+offset_y=0
+font_size=22
 alpha=1
 background_alpha=0.25
 text_color=EFEFEF
