--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -27,6 +27,6 @@ rounded-corners-exclude = [
     "window_type = 'dropdown_menu'"
 ];
 
-backend = "xrender";
+backend = "glx";
 refresh-rate = 144;
 vsync = false;
