--- a/etc/xorg.conf.d/20-nvidia.conf
+++ b/etc/xorg.conf.d/20-nvidia.conf
@@ -1,6 +1,6 @@
 Section "Device"
-        Identifier "GTX 970"
-        VendorName "NVIDLAME Corporation"
+        Identifier "Quadro P400"
+        VendorName "NVIDIA Corporation"
         Option "NoLogo" "true"
         Driver "nvidia"
         Option  "metamodes" "nvidia-auto-select +0+0 { ForceFullCompositionPipeline = On }"
