--- a/MangoHud/MangoHud.conf
+++ b/MangoHud/MangoHud.conf
@@ -1,13 +1,21 @@
-fps=0
 vsync=1
+fps_limit=200
+
+fps=0
+core_load=0
 gpu_stats=0
 cpu_stats=0
+
 position=top-left
 offset_x=380
 offset_y=1344
-height=200
-font_size=20
+
+font_size=22
+
 alpha=1
 background_alpha=0.25
 text_color=EFEFEF
 frametime_color=EFEFEF
+
+toggle_hud=F9
+reload_cfg=F12
