--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -11,12 +11,12 @@ u set window-scale 1.0
 
 Q quit
 q playlist-remove current
-f run "/home/fyr/src/fwm/move full"
+f run "/home/fyr/src/fwm/move"
 Ctrl+l run "/home/fyr/.dots/bin/fcut"
+Ctrl+e run "/home/fyr/.dots/bin/fcut eof"
 Ctrl+c run "/home/fyr/.dots/bin/fcut precise"
 Ctrl+q quit-watch-later
 
-P show-text "${playlist}"
 BS show-text "${track-list}"
 
 b cycle interpolation
@@ -29,7 +29,3 @@ MBTN_BACK     ignore
 MBTN_FORWARD  ignore
 WHEEL_UP      ignore
 WHEEL_DOWN    ignore
-
-# scripts
-g script-message contact-sheet-close; script-message playlist-view-toggle
-c script-message playlist-view-close; script-message contact-sheet-toggle
