--- a/MangoHud/default.conf
+++ b/MangoHud/default.conf
@@ -1,11 +1,19 @@
-vsync=2
-gpu_stats=1
-cpu_stats=1
+fps=1
+vsync=1
+core_load=0
+gpu_stats=0
+cpu_stats=0
+
 position=top-right
 offset_x=0
 offset_y=0
-font_size=24
+
+font_size=22
+
 alpha=1
 background_alpha=0.25
 text_color=EFEFEF
 frametime_color=EFEFEF
+
+toggle_hud=F9
+reload_cfg=F10
