--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,7 @@
 # vim: syntax=config
 
 # behaviour
+volume=40
 loop-playlist
 use-filedir-conf
 force-seekable=yes
@@ -8,35 +9,39 @@ cursor-autohide=1000
 prefetch-playlist=yes
 save-position-on-quit=yes
 
-# audio
-volume=40
-replaygain=track
-no-audio-display
-
 # video
-profile=gpu-hq # vo=libmpv
+hwdec=auto
+profile=gpu-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
-video-sync=display-resample
 hdr-compute-peak=no
+
+# interpolation
+video-sync=display-resample
 interpolation=yes
 tscale=mitchell
+blend-subtitles=yes
 
 # geometry
 autofit-smaller=10%
-autofit-larger=40%
+autofit-larger=50%
 
 # osd
 osc=no
 osd-level=1
-osd-font="Overpass Light"
-osd-font-size="24"
+osd-font="Overpass"
+osd-font-size="20"
 osd-color='#CCE7E7E7'
 osd-border-size=2
-osd-border-color='#DD282828'
+osd-border-color='#DD171717'
 osd-status-msg='${filename} \n\n ${playback-time} / ${duration} ${?percent-pos:(${percent-pos}%)}'
 
 # subs
+sub-font='Overpass'
+sub-font-size='20'
+sub-color='#CCE7E7E7'
+sub-border-size=2
+sub-border-color='#DD171717'
 no-sub-visibility # no subs on launch
 sub-auto=fuzzy    # external subs don't have to match the file name exactly to autoload
 
@@ -45,8 +50,7 @@ slang=enm,en,eng       # automatically select these subtitles (decreasing priori
 alang=ja,jp,jpn,en,eng # automatically select these audio tracks (decreasing priority)
 
 # terminal
-term-playing-msg='\nDuration: ${duration}, Format: ${file-format}'
-really-quiet
+term-playing-msg='\nDuration: ${duration}, Resolution: ${width}x${height}, Framerate, ${container-fps} Hz'
 
 # misc
 title="${?media-title:${media-title}}${!media-title:No file.}"
@@ -55,3 +59,31 @@ screenshot-png-compression=0
 screenshot-directory="~/usr/img/mpv"
 ytdl-format='bestvideo[ext=mp4][width<=1920][height<=1080]+bestaudio[ext=m4a]'
 watch-later-directory="~/.local/share/mpv"
+
+# profiles
+[protocol.http]
+force-window=immediate
+
+[protocol.https]
+profile=protocol.http
+
+[protocol.ytdl]
+profile=protocol.http
+
+[audio]
+replaygain=track
+no-audio-display
+
+[video]
+
+[image]
+profile=nodir
+glsl-shaders-clr
+mute=yes
+scale=ewa_lanczos
+background=0.1
+input-conf=~~/input-image.conf
+video-unscaled=yes
+title="mvi - ${?media-title:${media-title}}${!media-title:No file}"
+image-display-duration=inf
+loop-file=yes
