--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,9 +1,9 @@
 # shadow
 shadow = true;
-shadow-radius = 12;
-shadow-offset-x = -8;
-shadow-offset-y = -8;
-shadow-opacity = 0.6;
+shadow-radius = 7;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
+shadow-opacity = 0.5;
 
 # fade
 fading = false;
@@ -22,4 +22,4 @@ wintypes:
 
 backend = "glx";
 refresh-rate = 144;
-vsync = false;
+vsync = true;
