--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -29,11 +29,11 @@ autofit-larger=50%
 # osd
 osc=no
 osd-level=1
-osd-font="Overpass"
-osd-font-size="20"
-osd-color='#CCE7E7E7'
+osd-font="Overpass Mono"
+osd-font-size="22"
+osd-color='#CCE0E0E0'
 osd-border-size=2
-osd-border-color='#DD171717'
+osd-border-color='#DD101010'
 osd-status-msg='${filename} \n\n ${playback-time} / ${duration} ${?percent-pos:(${percent-pos}%)}'
 
 # subs
