--- a/MangoHud/MangoHud.conf
+++ b/MangoHud/MangoHud.conf
@@ -1,8 +1,8 @@
-vulkan_driver=0
+vulkan_driver=1
 
-fps=0
+fps=1
 vsync=1
-histogram=0
+histogram=1
 
 gpu_stats=0
 gpu_power=0
@@ -10,8 +10,8 @@ cpu_stats=0
 core_load=0
 
 position=top-left
-offset_x=380
-offset_y=1344
+# offset_x=380
+# offset_y=1344
 
 font_size=22
 
