--- a/configs/midair/auto.cfg
+++ b/configs/midair/auto.cfg
@@ -1,13 +1,17 @@
 // fyr config
 //
+// change all ingame settings to low or off except for:
+// - antialiasing to medium
+// - textures to high
+//
 // save this file as autoexec.cfg in
 // ...\SteamApps\common\Midair\ Community\ Edition\MidairCE\Binaries
-// in Steam add 'exec=autoexec.cfg' to the Midair launch options
+// in Steam add '-exec=autoexec.cfg' to the Midair launch options
 //
 // for use on windows shortcuts:
 // windows startmenu: right-click -> more -> open file location.
 // right-click on the shortcut -> properties -> shortcut tab.
-// add exec=autoexec.cfg to the end of the Target field.
+// add -exec=autoexec.cfg to the end of the Target field.
 //
 // console key
 // set it to something else if you don't have a US keyboard layout. For key names you can check:
@@ -15,23 +19,23 @@
 // there is now also a binding within the keybindings menu under global
 set Engine.InputSettings ConsoleKey Grave
 
-showperformancestats 0 // [0-1] <-- for framerate / ping monitoring
+ShowPerformanceStats 1 // [0-1] <-- for framerate / ping monitoring
 // stat fps            // fps and ms response on right hand side of screen
 // stat unit           // further details about ms response
 
 // video
-r.OneFrameThreadLag 1                                // [0,1] lower frame latency (supposedly) at the cost of framerate
-r.FinishCurrentFrame 0                               // [0,1] disables frame buffering
-r.ScreenPercentage 100                               // internal resolution of game without affecting HUD quality, turn up for super-sampling, turn down for performance
+r.OneFrameThreadLag 0                                // [0,1] lower frame latency (supposedly) at the cost of framerate
+r.FinishCurrentFrame 1                               // [0,1] disables frame buffering
+r.ScreenPercentage 110                               // internal resolution of game without affecting HUD quality, turn up for super-sampling, turn down for performance
 r.Upscale.Quality 3                                  // [0-5] upscale / downscale quality for r.ScreenPercentage
-set Midair.MAGameEngine FrameRateCap 200             // <-- 200 feels best for me
+set Midair.MAGameEngine FrameRateCap 220             // <-- 200 feels best for me
 set MidairCE.MAGameUserSettings bUseVSync False      // vsync is bad and you never want to use it
 set MidairCE.MAGameUserSettings ResolutionSizeX 2560 // <-- change to your resolution
 set MidairCE.MAGameUserSettings ResolutionSizeY 1440 // <-- change to your resolution
-set MidairCE.MAGameUserSettings FullscreenMode 2     // <-- 0 = Fullscreen 1 = Borderless 2 = Windowed
+set MidairCE.MAGameUserSettings FullscreenMode 0     // <-- 0 = Fullscreen 1 = Borderless 2 = Windowed
 
 // fov
-set MidairCE.MAGameUserSettings UserFOV 86                                // <-- Min=80 Max=120
+set MidairCE.MAGameUserSettings UserFOV 88                                // <-- Min=80 Max=120
 set Engine.LocalPlayer AspectRatioAxisConstraint AspectRatio_MaintainYFOV // allows greater range of FOV: 90 vfov = 120 hfov
 
 // sound
@@ -40,14 +44,14 @@ set MidairCE.MAInputSettings bAutoAnnouncer False // disables vgs grab spam
 
 // mouse
 Mouse DPI=400     // <-- set to your mouse dpi for game to calculate correct turndist
-Mouse TurnDist=78 // <-- set to your desired turndist in cm
+Mouse TurnDist=80 // <-- set to your desired turndist in cm
 
 // crosshair
 set MidairCE.MAGameUserSettings CrosshairIndex 0     // <-- 0 = Default 1 = Default no outline etc
 set MidairCE.MAGameUserSettings CrosshairColor White // [White, Red, Blue, Green, Yellow, Magenta]
 
 # // iffs
-set MidairCE.MAGameUserSettings bShowIFFDistance True                // always show flag distance
+set MidairCE.MAGameUserSettings bShowIFFDistance False               // always show flag distance
 set MidairCE.MAGameUserSettings bRelativeTeamColors True             // colours are always the same regardless of side
 set MidairCE.MAGameUserSettings Team0Color (B=92,G=107,R=245,A=220)  // red enemy colour
 set MidairCE.MAGameUserSettings Team1Color (B=122,G=204,R=51,A=220)  // green team colour
@@ -61,11 +65,11 @@ set MidairCE.MAGameUserSettings Team1Color (B=122,G=204,R=51,A=220)  // green te
 
 r.color.min 0.0                     // <-- [0.0 default] minimum colours
 r.color.mid 0.5                     // <-- [0.5 default] midtone colours
-r.color.max 1.1                     // <-- [1.0 default] highlight colours
+r.color.max 0.9                     // <-- [1.0 default] highlight colours
 r.TonemapperFilm 0                  // [0-1] disables crappy colour effect
-r.TonemapperGamma 1.8               // <-- increase as desired for your monitor
+r.TonemapperGamma 0                 // <-- increase as desired for your monitor
 r.Tonemapper.Sharpen 0.5            // applies slight sharpening effect
-r.Tonemapper.Quality 1              // [0-5] higher options use better quality
+r.Tonemapper.Quality 0              // [0-5] higher options use better quality
 r.Tonemapper.GrainQuantization 0    // [0-1] provides minor performance benefit at cost of colour accuracy
 r.EyeAdaptationQuality 0            // [0,2] adapts to environment brightness, recommend off except on nightmaps
 r.SceneColorFormat 1                // [0-5] lower values have less mathematically perfect colours
@@ -76,7 +80,7 @@ r.DefaultFeature.AntiAliasing 1     // 1=FXAA 2=TAA 3=MSAA FXAA costs almost no 
 r.PostProcessAAQuality 6            // [0,2,4,6] minor quality change, set to 2 if using TAA
 
 // textures
-// show Decals
+show Decals
 // ^^^^^^^^
 // [(un)comment to toggle] removes decoration / explosion marks on terrain
 
@@ -85,7 +89,7 @@ r.Streaming.Boost 1                 // [0-2] mip levels, 1 default
 r.Streaming.MipBias 0               // [0-2] streaming texture quality
 r.Streaming.PoolSize -1             // [-1,size in MBs] texture streaming size in VRAM
 r.CreateShadersOnLoad 1             // [0-1] produce all shaders on level load, potentially reducing frame hitching
-r.RenderTargetPoolMin 1500          // minimum size in MBs for texture streaming
+r.RenderTargetPoolMin 8000          // minimum size in MBs for texture streaming
 r.Streaming.HLODStrategy 2          // [0-2] 2 disables all streaming and loads all textures
 r.Streaming.FullyLoadUsedTextures 1 // [0-1] stream used textures as fast as possible
 
@@ -95,9 +99,9 @@ r.StaticMeshLODDistanceScale 0.1    // [0-5] reduce mesh texture pop in
 r.SkeletalMeshLODBias 0             // [0-2] lower values = better model quality from distance
 
 // foliage
+r.ViewDistanceScale 0.001           // [0-whatever] setting lower can cause small rocks not to appear
 show InstancedFoliage               // toggles foliage which is a performance drain
-r.ViewDistanceScale 5               // | remove as much foliage as possible
-grass.DensityScale 0                // | as rendering sucks gpu processing power
+grass.DensityScale 0                // |
 foliage.DensityScale 0              // |
 sg.FoliageQuality 0                 // ▼
 
@@ -110,17 +114,18 @@ r.LightFunctionQuality 0            // [0,2] extra shadows generated by environm
 r.DistanceFieldAO 0                 // [0,1]
 
 // effects
-FX.MaxGPUParticlesSpawnedPerFrame 2 // [0-10] smoke level on grenades
-r.EmitterSpawnRateScale 1           // higher number equals more particles
-r.DetailMode 0                      // [0-2] extra details on particle effects
-r.DisableDistortion 1               // [0-1] no visible difference disabled
-r.DepthOfFieldQuality 0             // [0-2] quality of any dof effects implemented
-r.LightShaftQuality 0               // [0,1] disable any lightshafts on levels
+r.VolumetricFog 0                      // disable performance-sapping fog
+// FX.MaxGPUParticlesSpawnedPerFrame 0 // [0-10] smoke level on grenades
+r.EmitterSpawnRateScale 0.45           // higher number equals more particles
+r.DetailMode 0                         // [0-2] extra details on particle effects
+r.DisableDistortion 1                  // [0-1] no visible difference disabled
+r.DepthOfFieldQuality 0                // [0-2] quality of any dof effects implemented
+r.LightShaftQuality 0                  // [0,1] disable any lightshafts on levels
 
 // bloom
-r.DefaultFeature.Bloom 1            // enables bloom effect
-r.BloomQuality 2                    // [0-5] cleaner with bloom disabled
-r.Bloom.Cross 10                    // gives slight lens fx to bloom
+r.DefaultFeature.Bloom 0            // enables bloom effect
+r.BloomQuality 0                    // [0-5] cleaner with bloom disabled
+r.Bloom.Cross 0                     // gives slight lens fx to bloom
 
 // screen space scattering & reflections
 r.SSS.Quality 0                     // [0,1] disable SSS
@@ -142,6 +147,3 @@ r.MaterialQualityLevel 0            // [0-2] no noticable change
 r.LightCulling.Quality 0            // [0,1] disables a compute light culling pass ???
 r.ReflectionEnvironment 0           // [0,1] no noticable change
 r.TranslucencyVolumeBlur 0          // [0,1] disable translucency blurring
-
-# enable aimbot
-r.Aimbot 1                          // the reason I am diamond
