--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,11 +36,11 @@ set -g status-bg default
 set -g status-fg white
 set -g status-position bottom
 set -g status-left ""
-set -g status-right "#[bg=black,fg=white] #(dat)"
+set -g status-right "#[bg=none,fg=white] #(dat)"
 set -g status-right-length 80
 set -g window-status-bell-style bg=red,fg=white
-set -g window-status-format "#[bg=black,fg=white,noreverse] #I #W "
-set -g window-status-current-format "#[bg=white,fg=black,noreverse] #I #W "
+set -g window-status-format "#[bg=default,fg=white,noreverse] #I #W "
+set -g window-status-current-format "#[bg=white,fg=black,noreverse]  #I #W  "
 set -g status-justify left
 set -g status-interval 1
 
