--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,7 +25,7 @@ bind -r P previous-layout
 bind e copy-mode
 
 # mouse
-set -g mouse off
+set -g mouse on
 
 # status
 set -g status on
@@ -40,7 +40,7 @@ set -g status-right "#[bg=none,fg=white] #(dat)"
 set -g status-right-length 80
 set -g window-status-bell-style bg=red,fg=white
 set -g window-status-format "#[bg=default,fg=white,noreverse] #I #W "
-set -g window-status-current-format "#[bg=white,fg=black,noreverse]  #I #W  "
+set -g window-status-current-format "#[bg=white,fg=black,noreverse] #I #W "
 set -g status-justify left
 set -g status-interval 1
 
@@ -56,7 +56,7 @@ set -g automatic-rename on
 set -g mode-style bg=cyan,fg=white
 set -g pane-border-style fg=black
 set -g pane-active-border-style fg=white
-set -g clock-mode-colour red
+set -g clock-mode-colour white
 
 # set -g message-style style bg=cyan,fg=white
 # set -g message-command-style bg=cyan,fg=white
