update ma config

--- a/MangoHud/MangoHud.conf
+++ b/MangoHud/MangoHud.conf
@@ -1,19 +1,24 @@
+vulkan_driver=0
+
 fps=1
 vsync=1
-core_load=0
-gpu_stats=0
-cpu_stats=0
+histogram=1
 
-position=top-right
-offset_x=0
-offset_y=0
+gpu_stats=0
+gpu_power=0
+cpu_stats=0
+core_load=0
+
+position=top-left
+offset_x=380
+offset_y=1324
 
 font_size=22
 
 alpha=1
 background_alpha=0.25
-text_color=EFEFEF
-frametime_color=EFEFEF
+text_color=E0E0E0
+frametime_color=E0E0E0
 
 toggle_hud=F9
-reload_cfg=F10
+reload_cfg=F12
