--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -3,11 +3,11 @@ refresh-rate = 144;
 vsync = false;
 
 # shadow
-shadow = false;
+shadow = true;
 shadow-radius = 10;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
-shadow-opacity = 0.2;
+shadow-opacity = 0.4;
 
 shadow-exclude = [
     "class_g = 'menu'",
@@ -18,17 +18,20 @@ shadow-exclude = [
 
 # fade
 fading = false;
-fade-delta = 8;
-fade-in-step = 0.2;
-fade-out-step = 0.2;
+fade-delta = 12;
+fade-in-step = 0.15;
+fade-out-step = 0.15;
+
+# transparency
+# ??
 
 # corners
-round-borders = 1;
+round-borders = 0;
 round-borders-exclude = [
-    # "class_g = 'bar'",
+    "class_g = 'bar'",
 ]
 
-corner-radius = 6;
+corner-radius = 0;
 rounded-corners-exclude = [
     "class_g = 'menu'",
     "class_g = 'utility'",
@@ -37,7 +40,7 @@ rounded-corners-exclude = [
 ];
 
 # dim
-inactive-dim = 0.1;
+inactive-dim = 0.05;
 # frame-opacity = 0.7;
 
 # wintypes
