--- a/configs/midair/toast.cfg
+++ b/configs/midair/toast.cfg
@@ -1,25 +1,28 @@
-// fyr config v2.0
+// fyr's toast config v9.999
 //
 // change all ingame settings to low or off except for:
 // - antialiasing to medium
 // - textures to high
 //
-// read all comments and adjust your values accordingly
-// comments with <-- at the start you might want to change to your preferences
+// adjust your sound and hotkeys ingame
 //
-// save this file as autoexec.cfg in
+// read all comments and adjust your values accordingly
+// comments with <-- at the start you should change to your preferences
+//
+// save this file as toasty.cfg in
 // ...\SteamApps\common\Midair\ Community\ Edition\MidairCE\Binaries
-// in Steam add '-exec=autoexec.cfg' to the Midair launch options
+// in Steam add '-exec=toasty.cfg' to the Midair launch options
 //
 // for use on windows shortcuts:
 // windows startmenu: right-click -> more -> open file location.
 // right-click on the shortcut -> properties -> shortcut tab.
-// add -exec=autoexec.cfg to the end of the Target field.
+// add -exec=toasty.cfg to the end of the Target field.
 //
 // console key
 // there is now a binding within the keybindings menu under global, but this is still usable
 // set it to something else if you don't have a US keyboard layout. For key names you can check:
 // https://wiki.unrealengine.com/List_of_Key/Gamepad_Input_Names#Character_Keys
+
 set Engine.InputSettings ConsoleKey Grave
 
 ShowPerformanceStats 1 // [0-1] <-- for framerate / ping monitoring
@@ -28,8 +31,8 @@ ShowPerformanceStats 1 // [0-1] <-- for framerate / ping monitoring
 
 // video
 r.OneFrameThreadLag 1                                // [0,1] lower frame latency (supposedly) at the cost of framerate
-r.FinishCurrentFrame 1                               // [0,1] disables frame buffering
-r.ScreenPercentage 102                               // internal resolution of game without affecting HUD quality, turn up for super-sampling, turn down for performance
+r.FinishCurrentFrame 0                               // [0,1] disables frame buffering
+r.ScreenPercentage 102                               // internal resolution of game. turn up for super-sampling, turn down for performance
 r.Upscale.Quality 3                                  // [0-5] upscale / downscale quality for r.ScreenPercentage
 set Midair.MAGameEngine FrameRateCap 230             // <-- 230 feels best for me with minimal invs projectiles
 set MidairCE.MAGameUserSettings bUseVSync False      // vsync is bad and you never want to use it
@@ -47,7 +50,7 @@ set MidairCE.MAInputSettings bAutoAnnouncer False // disables vgs grab spam
 
 // mouse
 Mouse DPI=400     // <-- set to your mouse dpi for game to calculate correct turndist
-Mouse TurnDist=80 // <-- set to your desired turndist in cm
+Mouse TurnDist=83 // <-- set to your desired turndist in cm
 
 // crosshair
 set MidairCE.MAGameUserSettings CrosshairIndex 0     // <-- 0 = Default 1 = Default no outline etc
@@ -60,19 +63,25 @@ set MidairCE.MAGameUserSettings Team0Color (B=92,G=107,R=245,A=220)  // red enem
 set MidairCE.MAGameUserSettings Team1Color (B=122,G=204,R=51,A=220)  // green team colour
 // (B=228,G=195,R=139,A=220) blue colour blind friendly
 
-// lighting and brightness
-ShowFlag.DirectLighting 0           // [0,1] disable, enable biggest fps boost but removes dynamic lighting and
-                                    // requires colour correction with the commands below
+// lighting
 ShowFlag.Vignette 0                 // [0,1] disable, enable dark corners from the edges of the screen
+ShowFlag.DirectLighting 0           // [0,1] disable, enable biggest fps boost but removes dynamic lighting and
 
-r.SkyLightingQuality          1     // [default 1.0] 0 disables all lighting
+// colours and terrain brightness
+//
+// i write the following commands for each map specificially in their own
+// seperate configuration files for each map, then manually exec in console
+// when the map is loaded. e.g. `exec minora`. The following settings are good
+// 'defaults'. On snow maps the intensity multiplier needs to be at least 1.
+
 r.SkylightIntensityMultiplier 2.5   // [default 1.0] in/decrease the main source of lighting
-
-r.color.min 0.0                     // <-- [0.0 default] minimum colours
-r.color.mid 0.7                     // <-- [0.5 default] midtone colours
-r.color.max 1.5                     // <-- [1.0 default] highlight colours
-r.TonemapperFilm 0                  // [0-1] disables crappy colour effect
+r.color.min -0.001                  // <-- [0.0 default] minimum colours
+r.color.mid 0.55                    // <-- [0.5 default] midtone colours
+r.color.max 1.4                     // <-- [1.0 default] highlight colours
 r.TonemapperGamma 3.0               // <-- increase as desired for your monitor
+
+// colour application
+r.TonemapperFilm 1                  // [0-1] disables crappy colour effect
 r.Tonemapper.Sharpen 0.3            // applies slight sharpening effect
 r.Tonemapper.Quality 2              // [0-5] higher options use better quality
 r.Tonemapper.GrainQuantization 0    // [0-1] provides minor performance benefit at cost of colour accuracy
@@ -85,9 +94,8 @@ r.DefaultFeature.AntiAliasing 1     // 1=FXAA 2=TAA 3=MSAA FXAA costs almost no 
 r.PostProcessAAQuality 6            // [0,2,4,6] minor quality change, set to 2 if using TAA
 
 // textures
-ShowFlag.Decals 0                   // [0,1] disable, enable weapon and environment decals
-
-r.MaxAnisotropy 4                   // [0-16] texture filtering, 4 looks good enough for me
+ShowFlag.Decals 1                   // [0,1] disable, enable weapon and environment decals
+r.MaxAnisotropy 2                   // [0-16] texture filtering, 4 looks good enough for me
 r.Streaming.Boost 1                 // [0-2] mip levels, 1 default
 r.Streaming.MipBias 0               // [0-2] streaming texture quality
 r.Streaming.PoolSize -1             // [-1,size in MBs] texture streaming size in VRAM
@@ -98,26 +106,27 @@ r.Streaming.FullyLoadUsedTextures 1 // [0-1] stream used textures as fast as pos
 
 // level of detail
 r.MipMapLODBias 0                   // [0-15] level of detail for all textures
-r.StaticMeshLODDistanceScale 0.1    // [0-*] reduce mesh texture pop in
-r.SkeletalMeshLODBias 0             // [0-3] lower values = better model quality from distance
+r.StaticMeshLODDistanceScale 0.35   // [0-*] reduce mesh texture pop in while not impacting performance too much
+r.SkeletalMeshLODBias 1             // [0-3] lower values = better model quality from distance
 
 // foliage
 r.ViewDistanceScale 0.001           // [0-whatever] setting lower can cause small rocks not to appear
-show InstancedFoliage               // toggles foliage which is a performance drain
+showFlag.InstancedFoliage 0         // toggles foliage which is a performance drain
 grass.DensityScale 0                // |
 foliage.DensityScale 0              // |
 sg.FoliageQuality 0                 // ▼
 
 // shadows
 r.ShadowQuality 0                   // [0-5] no shadows best performance
-r.Shadow.MinResolution 512          // shadow resolution in MB
-r.Shadow.MaxResolution 1024         // compromise in quality / performance if you like shadows
+r.Shadow.MinResolution 256          // shadow resolution in MB
+r.Shadow.MaxResolution 512          // compromise in quality / performance if you like shadows
 r.Shadow.CSM.MaxCascades 4          // [0-4] higher number = more calculated shadows
 r.LightFunctionQuality 0            // [0,2] extra shadows generated by environment clouds
+r.AllowLandscapeShadows 0           // [0,1]
 
 // effects
 r.VolumetricFog 0                      // disable performance-sapping fog
-// FX.MaxGPUParticlesSpawnedPerFrame 4 // [0-10] smoke level on grenades
+FX.MaxGPUParticlesSpawnedPerFrame 3    // [0-10] smoke level on grenades
 r.EmitterSpawnRateScale 0.5            // higher number equals more particles
 r.DetailMode 0                         // [0-2] extra details on particle effects
 r.DisableDistortion 1                  // [0-1] no visible difference disabled
@@ -125,8 +134,8 @@ r.DepthOfFieldQuality 0                // [0-2] quality of any dof effects imple
 r.LightShaftQuality 0                  // [0,1] disable any lightshafts on levels
 
 // bloom
-r.DefaultFeature.Bloom 1            // enables bloom effect
-r.BloomQuality 1                    // [0-5] cleaner with bloom disabled
+r.DefaultFeature.Bloom 0            // [0,1] bloom effect
+r.BloomQuality 0                    // [0-5] cleaner with bloom disabled
 r.Bloom.Cross 0                     // gives slight lens fx to bloom
 
 // screen space scattering & reflections
