--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -10,11 +10,16 @@ prefetch-playlist=yes
 save-position-on-quit=no
 
 # video
-hwdec=vaapi-copy
+hwdec=nvdec
 profile=gpu-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
-hdr-compute-peak=no
+
+# better hdr
+hdr-compute-peak=yes
+tone-mapping=bt.2390
+tone-mapping-desaturate=1
+tone-mapping-desaturate-exponent=1.5
 
 # interpolation
 video-sync=display-resample
@@ -23,6 +28,7 @@ tscale=mitchell
 blend-subtitles=yes
 
 # geometry
+screen=0
 autofit-smaller=10%
 autofit-larger=50%
 
@@ -71,10 +77,13 @@ profile=protocol.http
 profile=protocol.http
 
 [audio]
+input-ipc-server=/tmp/mpvsocket
 replaygain=track
 no-audio-display
 
 [video]
+volume=60
+input-ipc-server=/tmp/vidsocket
 
 [image]
 profile=nodir
@@ -82,7 +91,6 @@ glsl-shaders-clr
 mute=yes
 scale=ewa_lanczos
 background=0.1
-input-conf=~~/input-image.conf
 video-unscaled=yes
 title="mvi - ${?media-title:${media-title}}${!media-title:No file}"
 image-display-duration=inf
