remove cwm; add pipewire

--- a/MangoHud/wine-MidairCE-Win64-Test.conf
+++ b/MangoHud/wine-MidairCE-Win64-Test.conf
@@ -1,7 +1,6 @@
 vulkan_driver=0
 
 fps=1
-fps_limit=160
 vsync=1
 histogram=0
 
@@ -21,14 +20,14 @@ core_load=0
 
 ram=0
 
-position=bottom-right
-offset_x=0
-offset_y=0
+position=bottom-left
+offset_x=370
+offset_y=-9
 
 font_size=20
 
 alpha=1
-background_alpha=0.25
+background_alpha=0
 gpu_color=E0E0E0
 engine_color=E0E0E0
 text_color=E0E0E0
