--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -9,6 +9,9 @@ cursor-autohide=1000
 prefetch-playlist=yes
 save-position-on-quit=no
 
+# audio
+volume=50
+
 # video
 hwdec=vaapi
 profile=gpu-hq
@@ -40,7 +43,7 @@ osd-font-size="22"
 osd-color='#CCE0E0E0'
 osd-border-size=2
 osd-border-color='#DD101010'
-osd-status-msg='${filename} \n\n ${playback-time} / ${duration} ${?percent-pos:(${percent-pos}%)}'
+osd-status-msg='${filename} \n\n ${playback-time} / ${duration} ${?percent-pos:(${percent-pos}%)} | ${volume}%'
 
 # subs
 sub-font='Overpass'
@@ -74,11 +77,9 @@ replaygain=track
 no-audio-display
 
 [video]
-volume=60
 input-ipc-server=/tmp/vidsocket
 
 [svp]
-volume=60
 input-ipc-server=/tmp/mpvsocket
 hr-seek-framedrop=no
 resume-playback=no
