--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -37,11 +37,11 @@ set -g status on
 set -g visual-activity off
 set -g monitor-activity on
 set -g status on
-set -g status-bg default
+set -g status-style bg=default
 set -g status-fg white
 set -g status-position bottom
 set -g status-left ""
-set -g status-right "#[bg=none,fg=white] #(battery)   #(dat)"
+set -g status-right "#[bg=,fg=white] #(battery)   #(dat)"
 set -g status-right-length 80
 set -g window-status-bell-style bg=red,fg=white
 set -g window-status-format "#[bg=default,fg=white,noreverse] #I #W "
