--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -13,7 +13,7 @@ save-position-on-quit=no
 volume=50
 
 # video
-hwdec=vaapi
+hwdec=no
 profile=gpu-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
@@ -78,12 +78,6 @@ no-audio-display
 
 [video]
 input-ipc-server=/tmp/vidsocket
-
-[svp]
-input-ipc-server=/tmp/mpvsocket
-hr-seek-framedrop=no
-resume-playback=no
-hwdec=auto-copy
 
 [image]
 profile=nodir
