--- a/pipewire/pipewire.conf
+++ b/pipewire/pipewire.conf
@@ -18,9 +18,9 @@ context.properties = {
 
     ## Properties for the DSP configuration.
     default.clock.rate        = 96000
-    default.clock.quantum     = 32
-    default.clock.min-quantum = 32
-    default.clock.max-quantum = 1024
+    # default.clock.quantum     = 128
+    # default.clock.min-quantum = 128
+    # default.clock.max-quantum = 1024
     #default.video.width       = 640
     #default.video.height      = 480
     #default.video.rate.num    = 25
